prototypes/p5a/tests/invalid/21_lava_flow_dead_code.hll
// INVALID: lava flow — function never called (dead code)
module deadcode

function usedFunction() -> Int {
    42
}

function neverCalled() -> Int {
    99
}

function main() {
    let x = usedFunction()
    println(x)
}
